# graded-judge

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  demo.md  demo.py  pyproject.toml
configs/: default.yaml
examples/: basic_usage.py  custom_rules.py  full_pipeline.py
src/graded_judge/: __init__.py  config.py  cost.py  evaluator.py  models.py  pipeline.py
src/graded_judge/providers/: __init__.py  base.py  bedrock.py  mock.py  ollama.py  openai.py
src/graded_judge/reporting/: __init__.py  summary.py
src/graded_judge/rules/: __init__.py  base.py  length.py  pattern.py  schema.py
src/graded_judge/tiers/: __init__.py  base.py  tier0.py  tier1.py  tier2.py
tests/: __init__.py  conftest.py  test_cost.py  test_pipeline.py  test_providers.py  test_rules.py  test_tier0.py  test_tier1.py  test_tier2.py
