[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graded-judge"
version = "0.1.0"
description = "Tiered LLM evaluation with deterministic pre-filtering and cost-aware escalation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/graded_judge"]

[tool.hatch.build.targets.sdist]
packages = ["src/graded_judge"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
